--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,62 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
+.banner__headding{
+    font-family: 'Montserrat', sans-serif;
+}
+.catagoryHeadding{
+    font-family: 'Montserrat', sans-serif;
+}
+.Headding{
+    font-family: 'Montserrat', sans-serif;
+}
+.bannersliderItem{
+    background: url(../images/banner.png);
+    border-radius: 38px;
+}
+.slick-dots{
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    z-index: 999;
+}
+.slick-dots .slick-active{
+    width: 32px !important;
+    border-radius: 8px !important;
+    background: #F46B5B !important;
+
+}
+.slick-dots li{
+    font-size: 0;
+    width: 12px;
+    height: 12px;
+    background: #FFFF;
+    margin-left: 8px;
+    border-radius: 50%;
+    display: inline-block;
+}
+progress::-webkit-progress-bar {
+    background-color: #D0D0D2;
+    border-radius: 4px;
+  }
+  progress::-webkit-progress-value {
+    background-color: #F46B5B;
+    border-radius: 4px;
+
+  }
+@media screen and (max-width: 992px) {
+    .bannerRightArrow{
+      display: none !important;
+    }
+    .bannerLeftArrow{
+        display: none !important;
+    }
+  }
+  
